--- a/bootstrap-3.3.6-dist/main.css
+++ b/bootstrap-3.3.6-dist/main.css
@@ -11,6 +11,10 @@ h2,h3,h4,a,p{
 	font-family: knewave;
 	src: url("sansation_italic.ttf");
 }
+.row {
+	text-align: center;
+	padding-bottom: 50px;
+}
 
 .midrow {
 	padding-top: 25px;
@@ -18,7 +22,8 @@ h2,h3,h4,a,p{
 .btn-default {
 	background-color: #4d0013;
 	color:  #ffffff;
-	margin-bottom: 70px;
+	margin: 25px 10px 70px 10px;
+	padding-bottom: 200x;
 }
 .item {
 	list-style-image: center;
@@ -54,7 +59,7 @@ img {
 .featurette-heading {
 	font-size: 50px;
 	text-align: center;
-	padding-bottom: 25px;
+	padding-bottom: 40px;
 	color: black;
 }
 .lead {
@@ -97,6 +102,7 @@ img {
 }
 .prices p {
 	text-align: center;
+	font-size: 17px;
 }
 .container h1 {
 	font-size: 45px;
@@ -109,9 +115,24 @@ img {
 	background-color: grey;
 }
 .btn-primary {
-	background-color: #4d0013;
 	border-style: none;
 }
+
+.barbers-title{
+	padding: 25px 10px 35px 10px;
+	font-weight: bold;
+	font-size: 55px;
+}
+.glyphicon-envelope {
+	color: #337ab7;
+}
+.fades {
+	font-size: 17px;
+	padding-bottom: 20px;
+	max-width: 600px;
+	margin: 0 auto 0 auto;
+}
+
 
 @-webkit-keyframes cube-spin {
 	from { -webkit-transform: rotateY(0); }
@@ -180,12 +201,12 @@ img {
 	position: absolute;
 	width: 200px;
 	height: 200px;
-	background: rgba(255,255,255,0.1);
-	box-shadow: inset 0 0 30px rgba(125,125,125,0.8);
+	background: rgba(77,0,19, 0.2);
+	box-shadow: inset 0 0 30px rgba(77,0,19, 0.1);
 	font-size: 20px;
 	text-align: center;
 	line-height: 200px;
-	color: rgba(0,0,0,0.5);
+	color: rgba(0,0,0);
 	font-family: sans-serif;
 	text-transform: uppercase;
 }
@@ -368,7 +389,7 @@ img {
 	height: 120px;
 	border: 1px solid #ccc;
 	background: rgba(255,255,255,0.8);
-	box-shadow: inset 0 0 20px rgba(0,0,0,0.2);
+	box-shadow: inset 0 0 20px rgba(0,0,0);
 	line-height: 120px;
 	text-align: center;
 	font-size: 100px;
