--- a/bootstrap-3.3.6-dist/main.css
+++ b/bootstrap-3.3.6-dist/main.css
@@ -42,7 +42,6 @@ img {
 
 .midrow .img-circle {
 	border: 2px solid black;
-	display: block;
 }
 
 .navbar-brand > img {
@@ -66,11 +65,14 @@ img {
 	font-size: 35px;
 	text-align: center;
 	color: #777 !important;
+	margin: 0 auto 0 auto;
 }
 .para {
 	font-size: 25px;
 	text-align: center;
+	margin: 0 auto 0 auto;
 }
+
 .copy {
 	color:  black;
 	padding-top: 30px;
@@ -132,8 +134,8 @@ img {
 	padding-bottom: 20px;
 	max-width: 600px;
 	margin: 0 auto 0 auto;
+	text-align: center;
 }
-
 
 
 @-webkit-keyframes cube-spin {
@@ -204,7 +206,7 @@ img {
 	width: 200px;
 	height: 200px;
 	background: rgba(77,0,19, 0.2);
-	box-shadow: inset 0 0 30px rgba(77,0,19, 0.4);
+	box-shadow: inset 0 0 0 rgba(77,0,19, 0.4);
 	font-size: 20px;
 	text-align: center;
 	line-height: 200px;
@@ -391,7 +393,7 @@ img {
 	height: 120px;
 	border: 1px solid #ccc;
 	background: rgba(255,255,255,0.8);
-	box-shadow: inset 0 0 20px rgba(0,0,0,0);
+	box-shadow: inset 0 0 0 rgba(0,0,0,0);
 	line-height: 120px;
 	text-align: center;
 	font-size: 100px;
