--- a/bootstrap-3.3.6-dist/main.css
+++ b/bootstrap-3.3.6-dist/main.css
@@ -136,6 +136,10 @@ img {
 	margin: 0 auto 0 auto;
 	text-align: center;
 }
+.number {
+	list-style-type: none;
+	color: black;
+}
 
 
 @-webkit-keyframes cube-spin {
