--- a/bootstrap-3.3.6-dist/main.css
+++ b/bootstrap-3.3.6-dist/main.css
@@ -210,8 +210,8 @@ img {
 	position: absolute;
 	width: 200px;
 	height: 200px;
-	background: rgba(77,0,19, 0.2);
-	box-shadow: inset 0 0 0 rgba(77,0,19, 0.4);
+	background: rgba(0, 0, 0, 0.33);
+	box-shadow: inset 0 0 0 rgba(17, 17, 17, 1);
 	font-size: 20px;
 	text-align: center;
 	line-height: 200px;
@@ -301,7 +301,7 @@ img {
 	transform:rotateX(-90deg) translateY(-100px);
 	transform-origin: top center;
 	box-shadow: inset 0 0 30px dimgrey;
-	color: dimgrey;
+	color: white;
 }
 .depth div.bottom-pane {
 	-webkit-transform:rotateX(90deg) translateY(100px);
@@ -316,7 +316,7 @@ img {
 	transform:rotateX(90deg) translateY(100px);
 	transform-origin: bottom center;
 	box-shadow: inset 0 0 30px dimgrey;
-	color: dimgrey;
+	color: white;
 }
 .depth div.front-pane {
 	-webkit-transform: translateZ(100px);
@@ -397,7 +397,7 @@ img {
 	width: 120px;
 	height: 120px;
 	border: 1px solid #ccc;
-	background: rgba(255,255,255,0.8);
+	background: rgba(17, 17, 17, 1);
 	box-shadow: inset 0 0 0 rgba(0,0,0,0);
 	line-height: 120px;
 	text-align: center;
